2008-04-14  Albert Chu  <chu11@llnl.gov>

	* META, NEWS: Update for release.

	* tagged gendersllnl-1-13-1

2008-04-14  Py Watson <watson30@llnl.gov>

	* dist/dist2: Change limit_nodes array to hash.
	
2008-04-11  Albert Chu  <chu11@llnl.gov>

	* META, NEWS: Update for release.

	* tagged gendersllnl-1-12-1

2008-04-11  Py Watson <watson30@llnl.gov>

	* dist/dist2 (altname_preserve, emit_definition, getnodes,
	participating_nodes): To improve lookup speed, cache the alternate
	node names in a hash.

	* dist/dist2 (participating_nodes): Fix indentation.

	* dist/dist2 (getnodes, participating_nodes): To improve lookup
	speed, save the list of possible target nodes as a hash rather
	than an array.
	
2008-04-03  Albert Chu  <chu11@llnl.gov>

	* META, NEWS: Update for release.

	* tagged gendersllnl-1-11-1

2008-04-02  Py Watson <watson30@llnl.gov>

	* dist/dist2 (get_all_packages): More accurately match Distfiles
	under the dist directory (e.g. will not attempt to use a distfile
	named "Distfile-foo").  Sort list of packages when none are
	explicitly given so as to have deterministic behaviour as to the
	order the distfiles are used.

2008-03-28  Albert Chu  <chu11@llnl.gov>

        * man/: Fix nroff syntax errors.
	
	* update copyrights in a lot of places

2008-01-29  Albert Chu  <chu11@llnl.gov>

        * src/libcommon/hostlist.h, src/libcommon/hostlist.c: Update to
        new libs.
	
2008-01-28  Albert Chu  <chu11@llnl.gov>

	* src/libgenders/gendersllnl.c (genders_get_cluster): Fix logic
	corner case.

	* dist/inst.c (main): Remove pointless check.
	
2007-10-17  Albert Chu  <chu11@llnl.gov>

	* DISCLAIMER.UC: New file.

	* DISCALIMER: Updated with new disclaimer.

	* Makefile.am, gendersllnl.spec.in: Add DISCLAIMER.UC.

	* Globally update copyright and fsf address.
	
2007-10-02  Albert Chu  <chu11@llnl.gov>

	* META, NEWS: Update for release.

	* tagged gendersllnl-1-10-1
	
2007-10-01  Albert Chu  <chu11@llnl.gov>
