@@ -1,3 +1,8 @@
+2004-11-30  Mark Grondona <mgrondona@llnl.gov>
+
+	* compat/Hostlist.pm (expand, expand_quadrics_range) : Minor
+	Hostlist.pm fixes to avoid "unitialized use" warnings.
+	
 2008-04-14  Albert Chu  <chu11@llnl.gov>
 
 	* META, NEWS: Update for release.
